--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
     "prettier": "^1.19.1",
+    "pug-plain-loader": "^1.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-pug": "~2.0.0",
     "vue-jest": "^5.0.0-0"
   }
 }
